[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mentpy"
version = "0.1.0a9"
description = "A Python library for simulating MBQC circuits"
readme = "README.md"
authors = [{name = "Luis Mantilla", email = "contact@mentpy.com"}]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "galois>=0.3.5",
    "matplotlib>=3.7.1",
    "networkx>=2.8.8",
    "numpy>=1.23.5",
    "pathos",
    "PennyLane>=0.30.0",
    "scikit-learn>=1.2.2",
    "scipy>=1.10.1"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "coverage>=7.3.4",
    "galois>=0.3.7",
    "ipykernel>=6.25.2",
    "matplotlib>=3.8.2",
    "networkx>=3.2.1",
    "numpy>=1.25.2",
    "pandas>=2.1.4",
    "pathos>=0.3.1",
    "PennyLane>=0.33.1",
    "pickleshare>=0.7.5",
    "pyarrow>=15.0.0",
    "pytest>=7.4.2",
    "scikit-learn>=1.3.2",
    "scipy>=1.11.4",
    "Sphinx>=7.2.6",
    "sphinx_immaterial>=0.11.10"
]
